updated serveral sections of my portfolio

--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,8 +1,8 @@
 // COLORS
-$primary-color: #02aab0;
-$secondary-color: #00cdac;
+$primary-color: #1488cc;
+$secondary-color: #2b32b2;
 
-$white-color: #fff;
+$white-color: #d2d2d2e7;
 
 $dark-grey: #333333;
 $light-grey: #d2d2d2;
